# lucky-log

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.ini
example/: example.cpp
include/: console_sink.h  file_sink.h  log_archive.h  log_exception.h  log_formatter.h  log_rolling.h  log_sink.h
logs/: test_logger.txt
src/: console_sink.cpp  file_sink.cpp  log_archive.cpp  log_exception.cpp  log_formatter.cpp  log_rolling.cpp  logger.cpp
src/core/: logger.cpp  logger.h
test/: test_formatter.cpp  test_logger.cpp
